# soda-arc-core

./: LICENSE  README.md  pyproject.toml
examples/arc_like/: rotate_3x3.json
soda/: __init__.py  anchors.py  apply.py  core.py  evolution.py  grid.py  invariants.py  primitives.py  registry.py  score.py  search.py  solver.py  superintelligence.py
soda/tests/: test_composition_arc.py  test_evolution.py  test_flip.py  test_registry_system.py  test_rotate.py  test_superintelligence.py  test_translate.py
