[tool.poetry]
name = "soda-arc-core"
version = "0.1.0"
description = ""
authors = ["vandoanh1999 <your_email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = ">=2.0.0,<2.5.0"
torch-geometric = ">=2.3.0,<2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"